...
      builder: (BuildContext sheetContext) {
        return SafeArea(
          child: Column(
            mainAxisSize: MainAxisSize.min,
            children: <Widget>[
              ListTile(
                key: const Key('take_photo_option'),
                leading: const Icon(Icons.photo_camera_rounded),
                title: Text(l10n.takePhotoButton),
                onTap: () =>
                    Navigator.of(sheetContext).pop(PhotoPickSource.camera),
              ),
              ListTile(
...
